tg_parser/tests/invalid/node_inside_circuit.tg
circuit C(in a; out y) {
    node n;
}
